# fortran-sandbox

./: CMakeLists.txt  README.md  calc_factorial.f90  compile.sh  hello_world.f90  is_prime_brute.f90  is_prime_trial_division.f90  modulo_command_line.f90  modulo_user_input.f90  prime_factor_trial_division.f90  prime_factor_trial_division_recursive.f90
